syntax = "proto3";

package protobuff;

import "email.proto";
import "mobile.proto";

message ContactDetailsPb {
    EmailIdPb email = 1;
    MobilePb primaryMobile = 2;
    repeated MobilePb secondryMobile = 3;

}
